--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9889,16 +9889,62 @@ a.text-dark:hover {
   }
 }
 
-#mainContainer {
+#page {
+  height: 100vh;
+  width: 100%;
+}
+
+#header {
+  height: 160px;
+  width: 100%;
+  background-color: #EEE;
+  position: absolute;
+}
+
+#header .navbar {
   padding-left: 0;
   padding-right: 0;
 }
 
-#iframe {
+#content {
   width: 100%;
   height: 100vh;
+  padding-top: 200px;
+}
+
+#web_object_header {
+  height: 105px;
+  background-color: #EEE;
+}
+
+#iframe {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   border: none;
+}
+
+.web_object_header p {
+  margin: 0;
+  padding: 0;
+}
+
+.web_object_header p.url {
+  color: green;
+}
+
+.web_object_header .image {
+  width: 170px;
+  float: left;
+}
+
+.web_object_header .image img {
+  max-width: 150px;
+  max-height: 100px;
+}
+
+.web_object_header .content {
+  margin-left: 170px;
 }
 
