--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,15 +7,58 @@
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
-#mainContainer {
-  padding-left: 0;
-  padding-right: 0;
+#page {
+  height: 100vh;
+  width: 100%;
+}
+
+#header {
+  height: 160px;
+  width: 100%;
+  background-color: #EEE;
+  position: absolute;
+  .navbar {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+#content {
+  width: 100%;
+  height: 100vh;
+  padding-top: 200px;
+}
+
+#web_object_header {
+  height: 105px;
+  background-color: #EEE;
 }
 
 #iframe {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   margin: 0;
   padding: 0;
   border: none;
+}
+
+.web_object_header {
+  p {
+    margin: 0;
+    padding: 0;
+    &.url {
+      color: green;
+    }
+  }
+  .image {
+    width: 170px;
+    float: left;
+    img {
+      max-width: 150px;
+      max-height: 100px;
+    }
+  }
+  .content {
+    margin-left: 170px;
+  }
 }
