#10 Searching for a given text in the archived content

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9948,3 +9948,12 @@ a.text-dark:hover {
   margin-left: 170px;
 }
 
+em {
+  font-style: normal;
+  font-weight: bold;
+}
+
+.result-item {
+  margin-top: 35px;
+}
+
