--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -62,3 +62,12 @@
     margin-left: 170px;
   }
 }
+
+em {
+  font-style: normal;
+  font-weight: bold;
+}
+
+.result-item {
+  margin-top: 35px;
+}
