--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,10 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 @import "node_modules/bootswatch/dist/cerulean/bootswatch";
 
+[v-cloak] {
+  display: none;
+}
+
 $govbackup-header-height: 75px;
 $govbackup-footer-height: 40px;
 
